# Financial_News_Sentiment

./: .gitignore  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
artifacts/metrics/: confusion_matrix.csv
financialnewssentiment/app/: main.py  model_loader.py  preprocess_text.py
src/: __init__.py
src/data_download/: download_data.py
src/data_preprocessing/: preprocess_data.py
src/model_evaluation/: evaluate_model.py
src/model_training/: train_model.py
tests/: conftest.py  contants.py  test_app.py
