[tool.poetry]
name = "financialnewssentiment"
version = "0.3.0"
description = "Project to service a model to classifier sentiment in financial texts of the stock market"
authors = ["Lucas <lucaseduardopereirateles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.3"
pytest = "^9.0.2"
datasets = "^4.8.4"
joblib = "^1.5.3"
nltk = "^3.9.4"
scikit-learn = "^1.8.0"
scipy = "^1.17.1"
keras = "^3.14.0"
tensorflow = "^2.21.0"
numpy = "^2.4.4"


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"
kagglehub = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
