[tool.poetry]
name = "financialnewssentiment"
version = "0.4.0"
description = "Project MLOps to service a model to classifier sentiment in financial texts of the stock market"
authors = ["Lucas <lucaseduardopereirateles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.136.1"
pytest = "^9.0.2"
datasets = "^4.8.4"
joblib = "^1.5.3"
nltk = "^3.9.4"
scikit-learn = "^1.8.0"
scipy = "^1.17.1"
tensorflow = "2.19.0"
numpy = "2.1.3"
dvc = "^3.67.1"
python-dotenv = "1.1.0"
mlflow = "^3.11.1"
dagshub = "0.5.9"
pydantic = "^2.13.3"


[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"
kagglehub = "^1.0.0"
fastapi = {extras = ["standard"], version = "^0.136.1"}
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
